--- a/css/about.css
+++ b/css/about.css
@@ -2,7 +2,7 @@
 .header {
   display: flex;
   justify-content: space-between;
-  height: 50px;
+  height: 3.125rem; /* 50px / 16px = 3.125rem */
   position: fixed;
   left: 0;
   right: 0;
@@ -10,11 +10,11 @@
 }
 .header .right-section {
   display: flex;
-  margin-top: 10px;
-  margin-right: 15px;
+  margin-top: 0.625rem; /* 10px / 16px = 0.625rem */
+  margin-right: 0.9375rem; /* 15px / 16px = 0.9375rem */
 }
 .right-section .button-header {
-  margin: 5px;
+  margin: 0.3125rem; /* 5px / 16px = 0.3125rem */
   transition: text-decoration 0.15s;
 }
 .right-section .button-header a {
@@ -25,7 +25,7 @@
   cursor: pointer;
   text-decoration: underline;
   text-decoration-color: #ffde59;
-  text-decoration-thickness: 4px;
+  text-decoration-thickness: 0.25em; /* 4px / 16px = 0.25em */
 }
 
 /* Main */
@@ -33,15 +33,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 80px;
+  margin-top: 5rem; /* 80px / 16px = 5rem */
 }
 .about-info {
   display: grid;
   margin-top: 0;
   grid-template-columns: 2fr 1fr;
   grid-template-rows: auto;
-  font-size: 16px;
-  line-height: 25.6px;
+  font-size: 1rem; /* 16px / 16px = 1rem */
+  line-height: 1.6em; /* 25.6px / 16px = 1.6em */
 }
 @media (max-width: 37.5em) {
   .about-info {
@@ -58,16 +58,17 @@
   margin-bottom: 0;
   color: #f4cf39;
 }
+
 /* Get In Touch */
 .getInTouch {
   display: flex;
-  column-gap: 7px;
-  margin-bottom: 5px;
-  margin-left: -10px;
+  column-gap: 0.4375rem; /* 7px / 16px = 0.4375rem */
+  margin-bottom: 0.3125rem; /* 5px / 16px = 0.3125rem */
+  margin-left: -0.625rem; /* -10px / 16px = -0.625rem */
 }
 .touch-icon {
-  width: 36px;
-  margin: 10px;
+  width: 2.25em; /* 36px / 16px = 2.25em */
+  margin: 0.625rem; /* 10px / 16px = 0.625rem */
   transition: transform 0.2s ease-in-out;
 }
 .touch-icon:hover {
@@ -87,8 +88,8 @@
 body {
   background-color: #fafafa;
   font-family: Montserrat;
-  padding-top: 30px;
-  padding-bottom: 10px;
+  padding-top: 1.875rem; /* 30px / 16px = 1.875rem */
+  padding-bottom: 0.625rem; /* 10px / 16px = 0.625rem */
 }
 button {
   font-family: Montserrat;
