--- a/css/about.css
+++ b/css/about.css
@@ -2,6 +2,7 @@
 .header {
   display: flex;
   justify-content: space-between;
+  background-color: #fafafa;
   height: 3.125rem; /* 50px / 16px = 3.125rem */
   position: fixed;
   left: 0;
