--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,8 @@
   --color-white: #fafafa;
   --color-black: #1d1d1f;
   --color-yellow: #ffde59;
+  --angle: 45deg; /* initial arrow rotation angle */
+  --offset: 5px; /* wiggle animation offset */
 }
 /* Header */
 .header {
@@ -66,11 +68,11 @@
 } */
 #hero-section {
   display: grid;
-  grid-template-columns:800px 1fr 300px;
+  grid-template-columns: 800px 1fr 300px;
   grid-template-areas:
-  ". . portfolio"
-  "text filler portfolio"
-  "description . .";
+    ". . portfolio"
+    "text filler portfolio"
+    "description . .";
   grid-column-gap: 0;
   justify-content: space-between;
   margin-top: 12.5rem;
@@ -88,7 +90,7 @@
   font-size: 6rem;
 }
 .hero-name {
-  font-weight: 600; 
+  font-weight: 600;
   color: #fafafa;
   background-color: #ffde59;
 }
@@ -96,12 +98,6 @@
   grid-area: description;
   margin: 0;
   font-size: 2rem;
-}
-.hero-portfolio {
-  display: inline-flex;
-  grid-area: portfolio;
-  background-color: #ffde59;
-  color: var(--color-white);
 }
 .hero-portfolio-text {
   margin: 0;
@@ -111,9 +107,35 @@
   line-height: 7rem;
   text-align: right;
 }
-.empty-background{
+.hero-portfolio {
+  display: inline-flex;
+  grid-area: portfolio;
+  background-color: #ffde59;
+  color: var(--color-white);
+}
+.empty-background {
   grid-area: filler;
-background-color: #ffde59;
+  background-color: #ffde59;
+}
+
+/* Arrows */
+.arrow-container {
+  margin-top: 10rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.arrow-down {
+  border: solid var(--color-yellow);
+  border-width: 0 0.375rem 0.375rem 0;
+  padding: 1rem;
+  rotate: var(--angle);
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  margin-top: -1rem;
+  animation: wiggle 0.5s ease-in-out infinite alternate;
 }
 
 /* Footer */
@@ -136,27 +158,39 @@ button {
   font-family: Montserrat;
 }
 /* Media */
-@media (max-width: 450px) {
-  .empty-background{
-    display: none;
-  }
-  .hero-portfolio{
+@media (max-width: 850px) {
+  .empty-background,
+  .hero-portfolio {
     display: none;
   }
   #hero-section {
     display: grid;
-    grid-template-columns:1fr;
+    grid-template-columns: 1fr;
     grid-template-areas:
-    ". . portfolio"
-    "text filler portfolio"
-    "description . .";
+      ". . portfolio"
+      "text filler portfolio"
+      "description . .";
     margin: 0;
     margin-top: 14rem;
   }
-  .hero-title{
+  .hero-title {
     background-color: var(--color-white);
   }
-
+  .hero-desc {
+    font-size: 1.25rem;
+  }
+  .hero-title {
+    font-size: 4rem;
+  }
+  .left-section {
+    margin: 0;
+  }
+  .header .right-section {
+    margin: 0;
+  }
+  .arrow-container {
+    margin-top: 5rem;
+  }
 }
 
 /* Animations */
@@ -169,5 +203,13 @@ button {
   }
   100% {
     transform: translate(-50%, -50%) scaleX(1);
+  }
+}
+@keyframes wiggle {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(-5px, -5px);
   }
 }
