--- a/css/index.css
+++ b/css/index.css
@@ -11,8 +11,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #fafafa;
+  background-color: transparent;
   position: sticky;
+  z-index: 100;
   left: 0;
   right: 0;
   top: 0;
@@ -38,37 +39,38 @@
   margin-top: 2em;
   margin-right: 3.75em;
 }
-.right-section .button-header {
-  margin-left: 2.2em;
-}
-.right-section .button-header a {
+.right-section a {
   text-decoration-color: #ffde59;
   text-decoration: none;
   color: #1d1d1f;
+  margin-left: 2.2em;
 }
-.right-section .button-header a:hover {
+.right-section a:hover {
   text-decoration: underline;
   text-decoration-color: #ffde59;
   text-decoration-thickness: 0.25em; /* .25rem / 1rem = 0.25em */
 }
-
+.list {
+  list-style: none;
+  display: flex;
+}
 .selected {
   text-decoration: underline;
   text-decoration-color: #ffde59;
   text-decoration-thickness: 0.25em;
 }
+/* Header Hamburger */
+
 /* Main Section */
-/* #hero-section {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  margin-top: 12.5rem;
-  margin-left: 4rem;
-  margin-right: 4rem;
-} */
+.first-section {
+  background-image: url("/imgs/background.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
 #hero-section {
+  background-color: transparent;
   display: grid;
-  grid-template-columns: 800px 1fr 300px;
+  grid-template-columns: 800px 1fr 325px;
   grid-template-areas:
     ". . portfolio"
     "text filler portfolio"
@@ -100,7 +102,7 @@
   font-size: 2rem;
 }
 .hero-portfolio-text {
-  margin: 0;
+  margin: 0px;
   font-style: normal;
   font-weight: 700;
   font-size: 6rem;
@@ -125,11 +127,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 
 .arrow-down {
   border: solid var(--color-yellow);
-  border-width: 0 0.375rem 0.375rem 0;
+  border-width: 0 6px 6px 0;
   padding: 1rem;
   rotate: var(--angle);
   transform: rotate(45deg);
@@ -149,16 +152,33 @@
 }
 
 /* General */
+html {
+  scroll-behavior: smooth;
+}
 body {
-  background-color: #fafafa;
   color: #1d1d1f;
   font-family: Montserrat;
+  margin: 0;
 }
 button {
   font-family: Montserrat;
 }
+section {
+  max-height: 100svh;
+  min-height: 65svh;
+  position: relative;
+  background: linear-gradient(180deg, #ececec 0%, #fafafa 12.5%);
+}
+.transparent {
+  background: transparent;
+}
+.hero-background {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
 /* Media */
-@media (max-width: 850px) {
+@media (max-width: 900px) {
   .empty-background,
   .hero-portfolio {
     display: none;
@@ -174,7 +194,7 @@ button {
     margin-top: 14rem;
   }
   .hero-title {
-    background-color: var(--color-white);
+    background-color: transparent;
   }
   .hero-desc {
     font-size: 1.25rem;
@@ -182,17 +202,38 @@ button {
   .hero-title {
     font-size: 4rem;
   }
-  .left-section {
-    margin: 0;
-  }
+  .header .left-section,
+  .header,
   .header .right-section {
     margin: 0;
   }
   .arrow-container {
     margin-top: 5rem;
   }
+  .arrow-down {
+    padding: 0.5rem;
+    margin-top: -0.5rem;
+    border-width: 0 3px 3px 0;
+  }
+  /* Hamburger */
 }
-
+@media (prefers-reduced-motion) {
+  .hidden {
+    transition: none;
+  }
+}
+/* Transitions */
+.hidden {
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(-100%);
+  transition: all 1.5s;
+}
+.show {
+  opacity: 1;
+  filter: blur(0);
+  transform: translateX(0);
+}
 /* Animations */
 @keyframes line {
   0% {
