--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,8 @@
   left: 0;
   right: 0;
   top: 0;
+  height: 4.6875rem;
+  padding: 0 1rem 0 1rem;
 }
 
 /* Header Left Secction */
@@ -63,9 +65,11 @@
 
 /* Main Section */
 .first-section {
-  background-image: url("/imgs/background.png");
-  background-size: contain;
-  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 12rem 1rem 2rem 1rem;
+  box-sizing: border-box;
 }
 #hero-section {
   background-color: transparent;
@@ -77,9 +81,10 @@
     "description . .";
   grid-column-gap: 0;
   justify-content: space-between;
-  margin-top: 12.5rem;
-  margin-left: 4rem;
-  margin-right: 4rem;
+  /* box-sizing: border-box; */
+  /* padding-top: 12.5rem; */
+  padding-left: 4rem;
+  padding-right: 4rem;
 }
 .hero-text {
   grid-area: text;
@@ -122,7 +127,6 @@
 
 /* Arrows */
 .arrow-container {
-  margin-top: 10rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -132,7 +136,7 @@
 
 .arrow-down {
   border: solid var(--color-yellow);
-  border-width: 0 6px 6px 0;
+  border-width: 0 0.375rem 0.375rem 0;
   padding: 1rem;
   rotate: var(--angle);
   transform: rotate(45deg);
@@ -140,7 +144,34 @@
   margin-top: -1rem;
   animation: wiggle 0.5s ease-in-out infinite alternate;
 }
-
+/* Projects Text */
+.second-section {
+  background: linear-gradient(180deg, #ececec 0%, #fafafa 12.5%);
+}
+.project-text-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.projects-text {
+  padding: 0.9375rem 0.625rem;
+  font-weight: 500;
+  font-size: 4rem;
+  color: #f1f1f1;
+  background: #ffde59;
+}
+/* Project Container */
+.project-container {
+  max-height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.project-picture {
+  width: 100%;
+  max-width: 62.5rem;
+  max-height: 62.5rem;
+}
 /* Footer */
 .footer {
   display: flex;
@@ -156,6 +187,7 @@ html {
   scroll-behavior: smooth;
 }
 body {
+  background: var(--color-white);
   color: #1d1d1f;
   font-family: Montserrat;
   margin: 0;
@@ -164,10 +196,8 @@ button {
   font-family: Montserrat;
 }
 section {
-  max-height: 100svh;
-  min-height: 65svh;
+  height: calc(100svh - 4.6875rem);
   position: relative;
-  background: linear-gradient(180deg, #ececec 0%, #fafafa 12.5%);
 }
 .transparent {
   background: transparent;
@@ -179,6 +209,24 @@ section {
 }
 /* Media */
 @media (max-width: 900px) {
+  .first-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1rem 1rem 2rem 1rem;
+    box-sizing: border-box;
+  }
+  .second-section {
+    background: linear-gradient(180deg, #fafafa 0%, #ececec 12.5%);
+  }
+  .hero-background {
+    display: none;
+  }
+  section {
+    max-height: 100svh;
+    min-height: 100%;
+    position: relative;
+  }
   .empty-background,
   .hero-portfolio {
     display: none;
@@ -190,8 +238,7 @@ section {
       ". . portfolio"
       "text filler portfolio"
       "description . .";
-    margin: 0;
-    margin-top: 14rem;
+    padding: 50% 0 0 1rem;
   }
   .hero-title {
     background-color: transparent;
@@ -206,9 +253,6 @@ section {
   .header,
   .header .right-section {
     margin: 0;
-  }
-  .arrow-container {
-    margin-top: 5rem;
   }
   .arrow-down {
     padding: 0.5rem;
