--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@
   --color-white: #fafafa;
   --color-black: #1d1d1f;
   --color-yellow: #ffde59;
+  --color-trans-yellow: rgba(255, 222, 89, 0.9);
   --angle: 45deg; /* initial arrow rotation angle */
   --offset: 5px; /* wiggle animation offset */
 }
@@ -65,6 +66,7 @@
 
 /* Main Section */
 .first-section {
+  height: calc(100svh - 4.6875rem);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -81,8 +83,6 @@
     "description . .";
   grid-column-gap: 0;
   justify-content: space-between;
-  /* box-sizing: border-box; */
-  /* padding-top: 12.5rem; */
   padding-left: 4rem;
   padding-right: 4rem;
 }
@@ -92,14 +92,14 @@
   flex-direction: column;
 }
 .hero-title {
-  background-color: var(--color-yellow);
+  background-color: var(--color-trans-yellow);
   margin: 0;
   font-size: 6rem;
 }
 .hero-name {
   font-weight: 600;
   color: #fafafa;
-  background-color: #ffde59;
+  background-color: var(--color-trans-yellow);
 }
 .hero-desc {
   grid-area: description;
@@ -117,12 +117,12 @@
 .hero-portfolio {
   display: inline-flex;
   grid-area: portfolio;
-  background-color: #ffde59;
-  color: var(--color-white);
+  background-color: var(--color-trans-yellow);
+  color: #ececec;
 }
 .empty-background {
   grid-area: filler;
-  background-color: #ffde59;
+  background-color: var(--color-trans-yellow);
 }
 
 /* Arrows */
@@ -149,6 +149,7 @@
   background: linear-gradient(180deg, #ececec 0%, #fafafa 12.5%);
 }
 .project-text-container {
+  background: #ececec;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -164,13 +165,55 @@
 /* Project Container */
 .project-container {
   max-height: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
 }
 .project-picture {
   width: 100%;
   max-width: 62.5rem;
   max-height: 62.5rem;
+}
+.project-img {
+  width: 50%;
+}
+.project-text {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  justify-content: center;
+  box-sizing: border-box;
+  gap: 20%;
+  width: 50%;
+}
+.project-year {
+  font-weight: 300;
+  font-size: 2rem;
+  margin: 0;
+}
+.project-title {
+  margin: 0;
+  padding: 0 0 0 0;
+  font-weight: 500;
+  font-size: 3.25rem;
+}
+.project-desc {
+  margin: 0;
+  margin-left: 1px;
+  padding: 0.5rem 0 7rem 0;
+  font-weight: 300;
+  font-size: 2rem;
+}
+.view-project {
+  margin: 0;
+  padding: 0 0 0 0;
+  margin-left: 4px;
+  text-decoration: none;
+  color: #1d1d1f;
+}
+.view-project:hover {
+  border-bottom: solid #ffde59 0.25em;
+}
+.project-content {
+  max-width: 75%;
 }
 /* Footer */
 .footer {
@@ -179,6 +222,7 @@
   height: 3.125rem; /* 3.125rem / 1rem = 50px */
   left: 0;
   right: 0;
+  bottom: 0;
   justify-content: space-between;
 }
 
@@ -187,6 +231,7 @@ html {
   scroll-behavior: smooth;
 }
 body {
+  height: 100%;
   background: var(--color-white);
   color: #1d1d1f;
   font-family: Montserrat;
@@ -196,7 +241,6 @@ button {
   font-family: Montserrat;
 }
 section {
-  height: calc(100svh - 4.6875rem);
   position: relative;
 }
 .transparent {
@@ -209,6 +253,7 @@ section {
 }
 /* Media */
 @media (max-width: 900px) {
+  /* First Section */
   .first-section {
     display: flex;
     flex-direction: column;
@@ -216,8 +261,39 @@ section {
     padding: 1rem 1rem 2rem 1rem;
     box-sizing: border-box;
   }
+  /* My Projects */
+  .projects-text {
+    margin: 0;
+    font-size: 2rem;
+  }
+  .project-text-container {
+    background: #fafafa;
+  }
+  /* Second Section */
   .second-section {
     background: linear-gradient(180deg, #fafafa 0%, #ececec 12.5%);
+  }
+  .project-container {
+    flex-direction: column;
+  }
+  .project-img {
+    width: 100%;
+    height: 25%;
+  }
+  .project-text {
+    padding: 0 0 0 1rem;
+    width: 100%;
+  }
+  .project-year {
+    font-size: 1rem;
+    padding: 0 0 1rem 0;
+  }
+  .project-title {
+    font-size: 1.5rem;
+  }
+  .project-desc {
+    font-size: 1rem;
+    padding: 0.375rem 0 2rem 0;
   }
   .hero-background {
     display: none;
