--- a/css/index.css
+++ b/css/index.css
@@ -205,7 +205,10 @@
 .view-project {
   margin: 0;
   padding: 0 0 0 0;
-  margin-left: 4px;
+  font-weight: 500;
+  font-size: 2rem;
+
+  margin-left: 0.25rem;
   text-decoration: none;
   color: #1d1d1f;
 }
@@ -218,20 +221,47 @@
 /* Footer */
 .footer {
   display: flex;
-  position: sticky;
-  height: 3.125rem; /* 3.125rem / 1rem = 50px */
+  height: fit-content;
+  justify-content: center;
+  align-items: center;
   left: 0;
   right: 0;
   bottom: 0;
-  justify-content: space-between;
+  background-color: #f5f5f7;
 }
-
+.footer .middle-section {
+  display: flex;
+  flex-direction: column;
+}
+.credit-container,
+.contact-container {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem 0 1rem 0;
+  text-align: center;
+}
+.footer-text,
+.footer-click {
+  text-decoration: none;
+  color: var(--color-black);
+  margin: 0;
+  font-weight: 300;
+  font-size: 1rem;
+  transition: all 0.15s;
+}
+.footer-click:hover {
+  /* text-decoration: underline;
+  text-decoration-color: var(--color-black);
+  text-decoration-thickness: 0.1rem; */
+  border-bottom: solid var(--color-black) 0.1rem;
+}
 /* General */
 html {
   scroll-behavior: smooth;
 }
 body {
   height: 100%;
+  overflow-x: hidden;
   background: var(--color-white);
   color: #1d1d1f;
   font-family: Montserrat;
@@ -242,6 +272,7 @@ button {
 }
 section {
   position: relative;
+  padding-bottom: 1rem;
 }
 .transparent {
   background: transparent;
@@ -251,6 +282,18 @@ section {
   width: 100%;
   height: 100%;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 /* Media */
 @media (max-width: 900px) {
   /* First Section */
@@ -260,6 +303,9 @@ section {
     justify-content: space-between;
     padding: 1rem 1rem 2rem 1rem;
     box-sizing: border-box;
+  }
+  .arrow-container {
+    padding-bottom: 1rem;
   }
   /* My Projects */
   .projects-text {
@@ -275,6 +321,7 @@ section {
   }
   .project-container {
     flex-direction: column;
+    padding-bottom: 1rem;
   }
   .project-img {
     width: 100%;
@@ -294,6 +341,9 @@ section {
   .project-desc {
     font-size: 1rem;
     padding: 0.375rem 0 2rem 0;
+  }
+  .view-project {
+    font-size: 1rem;
   }
   .hero-background {
     display: none;
@@ -336,6 +386,11 @@ section {
     border-width: 0 3px 3px 0;
   }
   /* Hamburger */
+
+  /* Footer */
+  .footer-text {
+    font-size: 14px;
+  }
 }
 @media (prefers-reduced-motion) {
   .hidden {
@@ -343,10 +398,16 @@ section {
   }
 }
 /* Transitions */
-.hidden {
+.hidden-left {
   opacity: 0;
   filter: blur(5px);
   transform: translateX(-100%);
+  transition: all 1.5s;
+}
+.hidden-right {
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(100%);
   transition: all 1.5s;
 }
 .show {
