--- a/css/header.css
+++ b/css/header.css
@@ -43,16 +43,35 @@
   margin-right: 3.75em;
 }
 .right-section a {
+  position: relative;
   text-decoration-color: #ffde59;
   text-decoration: none;
   color: #1d1d1f;
   margin-left: 2.2em;
 }
-.right-section a:hover {
+/* Hover Animation */
+.right-section a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -6px;
+  width: 100%;
+  height: 3px;
+  background: #ffde59;
+  border-radius: 5px;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform 0.5s;
+}
+.right-section a:hover::after {
+  transform-origin: left;
+  transform: scaleX(1);
+}
+/* .right-section a:hover {
   text-decoration: underline;
   text-decoration-color: #ffde59;
-  text-decoration-thickness: 0.25em; /* .25rem / 1rem = 0.25em */
-}
+  text-decoration-thickness: 0.25em;
+} */
 .list {
   list-style: none;
   display: flex;
