--- a/css/index.css
+++ b/css/index.css
@@ -150,6 +150,7 @@
   font-size: 2rem;
 }
 .view-project {
+  position: relative;
   margin: 0;
   padding: 0 0 0 0;
   font-weight: 500;
@@ -159,8 +160,22 @@
   text-decoration: none;
   color: #1d1d1f;
 }
-.view-project:hover {
-  border-bottom: solid #ffde59 0.25em;
+.view-project::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -6px;
+  width: 100%;
+  height: 5px;
+  background: #ffde59;
+  border-radius: 5px;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform 0.5s;
+}
+.view-project:hover::after {
+  transform-origin: left;
+  transform: scaleX(1);
 }
 .project-content {
   max-width: 75%;
