--- a/css/index.css
+++ b/css/index.css
@@ -137,6 +137,8 @@
   margin: 0;
 }
 .project-title {
+  text-decoration: none;
+  color: var(--color-black);
   margin: 0;
   padding: 0 0 0 0;
   font-weight: 500;
