--- a/css/project1.css
+++ b/css/project1.css
@@ -14,7 +14,7 @@
 #second-section {
   height: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: row-reverse;
   gap: 9rem;
   padding: 0 1rem 0 1rem;
   justify-content: center;
@@ -31,10 +31,14 @@
   font-weight: 400;
   font-size: 1.5rem;
 }
+.section-text p {
+  margin: 0;
+  padding: 1rem 0 3rem 0;
+}
 /* Project Info */
 .project-info {
   display: flex;
-  gap: 1rem;
+  gap: 2rem;
   width: fit-content;
 }
 .project-info p {
@@ -44,7 +48,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 0 0 1rem 0;
+  padding: 0 0 3rem 0;
 }
 .info-title {
   font-weight: 600;
@@ -79,12 +83,29 @@ body {
   }
   /* Second Section */
   #second-section {
-    flex-direction: column-reverse;
+    flex-direction: column;
     gap: 1rem;
   }
   .project-text {
     width: 100%;
   }
+  /* Font Adjusting */
+  .info-title,
+  .info-content {
+    font-size: 1rem;
+  }
+  .section-title {
+    font-size: 1.625rem;
+  }
+  .section-text {
+    font-size: 1.25rem;
+  }
+  /* Padding/Margin Adjusting */
+  .info-container {
+    gap: 0.625rem;
+    padding: 0 0 2rem 0;
+  }
+
   /* Temporary Section Change so that it doesn't look ugly */
   #first-section {
     height: fit-content;
