--- a/css/project1.css
+++ b/css/project1.css
@@ -76,6 +76,10 @@ body {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+  display: none;
+}
 
 @media (max-width: 900px) {
   /* Background */
