--- a/css/project1.css
+++ b/css/project1.css
@@ -19,6 +19,41 @@
   padding: 0 1rem 0 1rem;
   justify-content: center;
 }
+/* Third Section */
+#third-section {
+  height: 100%;
+  padding: 0 1rem 0 1rem;
+}
+.preview-container {
+  padding: 1rem 0 0 0;
+  position: relative;
+}
+.preview {
+  width: 100%;
+  z-index: 2;
+  pointer-events: none;
+}
+.preview-screen {
+  max-width: 100%;
+}
+.preview-content {
+  top: 4%;
+  bottom: 12.05%;
+  position: absolute;
+  z-index: 1;
+  width: 80%;
+  max-width: 980px;
+  overflow-y: auto;
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.preview-content::-webkit-scrollbar {
+  display: none;
+}
+.full {
+  width: 100%;
+}
 /* Project Text */
 .project-text {
   width: 45%;
@@ -71,10 +106,16 @@ body {
   font-family: Montserrat;
   margin: 0;
   overflow-x: clip;
+  z-index: -100;
 
   /* Hide scrollbar for IE, Edge and Firefox */
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+}
+.centered {
+  display: flex;
+  width: 100%;
+  justify-content: center;
 }
 /* Hide scrollbar for Chrome, Safari and Opera */
 body::-webkit-scrollbar {
