--- a/css/footer.css
+++ b/css/footer.css
@@ -3,10 +3,10 @@
   display: flex;
   height: fit-content;
   justify-content: center;
-  align-items: center;
   width: 100%;
   bottom: 0;
   background-color: #f5f5f7;
+  margin: 1rem 0 0 0;
 }
 .footer .middle-section {
   display: flex;
@@ -29,10 +29,8 @@
   transition: all 0.15s;
 }
 .footer-click:hover {
-  /* text-decoration: underline;
-  text-decoration-color: var(--color-black);
-  text-decoration-thickness: 0.1rem; */
-  border-bottom: solid var(--color-black) 0.1rem;
+  color: #000;
+  font-size: 1.1rem;
 }
 
 @media (max-width: 900px) {
