--- a/css/project3.css
+++ b/css/project3.css
@@ -5,10 +5,12 @@
 }
 /* Background */
 .project-background {
+  max-height: 720px;
   width: 100%;
 }
 .project-background-img {
   width: 100%;
+  height: 100%;
 }
 /* Text Section */
 #second-section {
@@ -26,8 +28,13 @@
   gap: 9rem;
   padding: 0 1rem 7.5rem 1rem;
 }
-.image-section {
-  width: 40%;
+.image-container {
+  max-width: 432px;
+  max-height: 432px;
+  width: 30%;
+}
+.result-img {
+  max-width: 100%;
 }
 /* Project Text */
 .project-text {
@@ -92,6 +99,11 @@ body {
   width: 100%;
   justify-content: center;
 }
+.left-aligned {
+  display: flex;
+  width: 100%;
+  justify-content: left;
+}
 .full {
   width: 100%;
 }
@@ -121,6 +133,9 @@ body::-webkit-scrollbar {
     flex-direction: column;
     gap: 1rem;
     padding-bottom: 5.625rem;
+  }
+  .image-container {
+    width: 100%;
   }
   .project-text,
   .image-section {
