--- a/css/project1.css
+++ b/css/project1.css
@@ -32,9 +32,19 @@
   width: 100%;
   z-index: 2;
   pointer-events: none;
+  position: relative;
 }
 .preview-screen {
   max-width: 100%;
+  position: relative;
+}
+.scroll-container {
+  position: absolute;
+  top: 50%;
+  left: 80%;
+  -ms-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 .preview-content {
   top: 4%;
