--- a/css/about.css
+++ b/css/about.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 5rem 2rem 0 2rem;
+  padding: 0;
 }
 .about-info {
   display: grid;
@@ -23,11 +23,25 @@
   padding: 1.75rem 0 0 0;
 }
 .about-name {
-  font-size: 4.5rem;
-  font-weight: 400;
+  font-weight: 500;
+  font-size: 3rem;
+  color: #ffde59;
+  padding: 3rem 0 3rem 0;
   margin: 0;
 }
-
+/* Text Container */
+.text-container {
+  max-width: 36rem;
+  font-size: 1.125rem;
+  font-weight: 400;
+}
+/* Icon Sizing */
+.text-icon {
+  height: 28px;
+}
+.test {
+  height: 25px;
+}
 /* Get In Touch */
 .get-in-touch {
   display: flex;
@@ -69,6 +83,9 @@ body {
 /* Media */
 @media (max-width: 900px) {
   /* Main Section */
+  .about-name {
+    padding: 0 0 1rem 0;
+  }
   .about-info {
     grid-template-columns: 1fr;
   }
