--- a/css/project4.css
+++ b/css/project4.css
@@ -12,6 +12,27 @@
   width: 100%;
   height: 100%;
 }
+
+/* Navbar */
+#navbar {
+  display: flex;
+  flex-direction: column;
+  position: sticky;
+  float: left;
+  width: fit-content;
+  top: 4.6875rem;
+  padding: 2rem 0 0 2rem;
+}
+#navbar a {
+  font-weight: 400;
+  font-size: 1.25rem;
+
+  padding: 0.5rem 0 0.5rem 0;
+  position: relative;
+  text-decoration-color: #ffde59;
+  text-decoration: none;
+  color: #1d1d1f;
+}
 /* Text Section */
 #second-section {
   height: 100%;
@@ -89,7 +110,6 @@
 }
 /* General */
 html {
-  scroll-behavior: smooth;
   overflow-x: clip;
 }
 body {
@@ -105,6 +125,10 @@ body {
   /* Hide scrollbar for IE, Edge and Firefox */
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+  display: none;
 }
 .centered {
   display: flex;
@@ -124,10 +148,6 @@ body {
 }
 .before-after {
   max-height: 500px;
-}
-/* Hide scrollbar for Chrome, Safari and Opera */
-body::-webkit-scrollbar {
-  display: none;
 }
 
 @media (max-width: 900px) {
@@ -172,6 +192,10 @@ body::-webkit-scrollbar {
   .info-container {
     gap: 0.625rem;
     padding: 0 0 2rem 0;
+  }
+  /* Navbar Adjustment */
+  #navbar {
+    display: none;
   }
 
   /* Temporary Section Change so that it doesn't look ugly */
