--- a/css/project1.css
+++ b/css/project1.css
@@ -22,7 +22,7 @@
 /* Third Section */
 #third-section {
   height: 100%;
-  padding: 0 1rem 0 1rem;
+  padding: 0 1rem 6rem 1rem;
 }
 .preview-container {
   padding: 1rem 0 0 0;
