Added Casetify details

--- a/css/project1.css
+++ b/css/project1.css
@@ -10,6 +10,17 @@
 .project-background-img {
   width: 100%;
 }
+/* Project Images */
+.section-images {
+  /* So that the pictures overflow into the right side */
+  width: 150%;
+  display: flex;
+  flex-direction: column;
+}
+.app-img {
+  padding: 1rem 0 1rem 0;
+  max-width: 100%;
+}
 /* Second Section */
 #second-section {
   height: 100%;
@@ -137,6 +148,10 @@ body::-webkit-scrollbar {
 @media (max-width: 900px) {
   /* Background */
   .project-background {
+  }
+  /* Img adjusting */
+  .section-images {
+    width: 100%;
   }
   /* Second Section */
   #second-section {
