--- a/css/project2.css
+++ b/css/project2.css
@@ -10,6 +10,20 @@
 .project-background-img {
   width: 100%;
 }
+/* Project Images */
+.section-images {
+  /* So that the pictures overflow into the right side */
+  width: 150%;
+  display: flex;
+  flex-direction: column;
+}
+.app-img {
+  padding: 1rem 0 1rem 0;
+  max-width: 100%;
+}
+.bigger-img {
+  width: 175%;
+}
 /* Text Section */
 #second-section {
   height: 100%;
@@ -27,7 +41,7 @@
   padding: 0 1rem 7.5rem 1rem;
 }
 .image-section {
-  width: 40%;
+  width: 35%;
 }
 /* Project Text */
 .project-text {
@@ -109,6 +123,13 @@ body::-webkit-scrollbar {
 @media (max-width: 900px) {
   /* Background */
   .project-background {
+  }
+  /* Img adjusting */
+  .section-images {
+    width: 100%;
+  }
+  .bigger-img {
+    width: 100%;
   }
   /* Text Section */
   #second-section {
