--- a/css/header.css
+++ b/css/header.css
@@ -27,7 +27,6 @@
 }
 /* Header Left Secction */
 .header .left-section {
-  text-align: right;
   padding: 0 0 0 4rem;
 }
 .gg-link {
@@ -45,7 +44,7 @@
 }
 .right-section a {
   position: relative;
-  text-decoration-color: #ffde59;
+  text-decoration-color: #2e5cb7;
   text-decoration: none;
   color: #1d1d1f;
 }
@@ -57,7 +56,7 @@
   bottom: -6px;
   width: 100%;
   height: 3px;
-  background: #ffde59;
+  background: #2e5cb7;
   border-radius: 5px;
   transform-origin: right;
   transform: scaleX(0);
@@ -80,9 +79,24 @@
 
 @media (max-width: 900px) {
   .header .left-section {
-    padding: 0 0 0 2rem;
+    padding: 0 0 0 1rem;
+    text-align: left;
   }
   .header .right-section {
-    padding: 0 2rem 0 0;
+    padding: 0 1rem 0 0;
+  }
+  .header .right-section .list li{
+    padding: 0 0 0 0rem;
+    display: flex;
+  }
+  .header .right-section a{
+    font-size: 1rem;
+    width: fit-content;
+  }
+  .gg-link{
+    font-size: 1rem;
+  }
+  .header .list{
+    gap: 0.75rem;
   }
 }
