--- a/css/general.css
+++ b/css/general.css
@@ -3,51 +3,52 @@
   --color-black: #1d1d1f;
   --color-blue: #2e5cb7;
 }
-#homepage-main{
+#homepage-main {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 2rem;
   height: 40%;
 }
-#main-content{
+#main-content {
   display: flex;
   flex-direction: column;
   min-height: 100svh;
   padding: 7rem;
   gap: 10rem;
 }
-.icon-main{
+.icon-main {
   max-width: 4rem;
   max-height: 4rem;
 }
-#homepage-main h1{
+#homepage-main h1 {
   color: var(--color-black);
   font-size: 4rem;
   font-weight: 400;
   margin: 0;
+  text-align: center;
 }
-#homepage-main h2{
+#homepage-main h2 {
   margin: 0;
 }
-.homepage-title{
+.homepage-title {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1rem;
   width: 38%;
 }
-.main-title-subtext{
+.main-title-subtext {
   color: var(--color-blue);
   text-align: center;
   font-size: 1.25rem;
   font-weight: 400;
   line-height: 140%;
 }
-.subtext-bold{
+.subtext-bold {
   font-weight: 700;
 }
-.homepage-title-desc{
+.homepage-title-desc {
   color: var(--color-black);
   text-align: center;
   font-size: 1.5rem;
@@ -56,13 +57,13 @@
   width: 65%;
 }
 /* Projects Section */
-#homepage-projects{
+#homepage-projects {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 4rem;
 }
-.homepage-projects-title{
+.homepage-projects-title {
   color: var(--color-blue);
   text-align: center;
   font-size: 2rem;
@@ -70,46 +71,50 @@
   line-height: normal;
   margin: 0;
 }
-.projects-container{
+.projects-container {
   display: flex;
   flex-direction: column;
   width: 60%;
   gap: 3rem;
   min-height: 50svh;
 }
-.projects-row{
+.projects-row {
   display: flex;
   justify-content: center;
   flex-direction: row;
   gap: 3rem;
   height: 50%;
 }
-.project-item{
+.project-item {
   position: relative;
   width: 50%;
   height: 50%;
   max-width: 500px;
   max-height: 500px;
 }
-.project-item a{
+.project-item a {
   display: flex;
   width: 100%;
   height: 100%;
 }
-.project-item img{
+.project-item img {
   cursor: pointer;
-  
+
   border-radius: 2rem;
   width: 100%;
   height: 100%;
 }
-.project-item-overlay{
+.project-item-overlay {
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.70) 0%, rgba(0, 0, 0, 0.70) 100%);
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 0.7) 0%,
+    rgba(0, 0, 0, 0.7) 100%
+  );
   border-radius: 2rem;
   opacity: 0;
   transition: 0.3s ease-in-out;
@@ -120,29 +125,29 @@
   padding: 3rem 2rem;
   box-sizing: border-box;
 }
-.project-item-overlay:hover{
+.project-item-overlay:hover {
   opacity: 1;
 }
-.overlay-year{
+.overlay-year {
   margin: 0;
   color: var(--color-white);
   font-size: 1.5rem;
   font-weight: 300;
 }
-.overlay-container{
+.overlay-container {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 16px;
   align-self: stretch;
 }
-.overlay-container h2{
+.overlay-container h2 {
   color: var(--color-white);
   font-size: 1.5rem;
   font-weight: 500;
   margin: 0;
 }
-.overlay-container h3{
+.overlay-container h3 {
   color: var(--color-white);
   font-size: 1.25rem;
   font-weight: 300;
@@ -174,43 +179,44 @@ body::-webkit-scrollbar {
   display: none;
 }
 @media (max-width: 900px) {
-  #main-content{
+  #main-content {
     padding: 1.5rem 1.5rem 0 1.5rem;
     gap: 3rem;
   }
-  .homepage-title{
+  .homepage-title {
     width: 100%;
   }
-  #homepage-main h1{
+  #homepage-main h1 {
     font-size: 2rem;
   }
-  .icon-main{
+  .icon-main {
     max-width: 2rem;
     max-height: 2rem;
   }
-  .main-title-subtext{
+  .main-title-subtext {
     font-size: 1rem;
   }
-  .homepage-title-desc{
+  .homepage-title-desc {
     font-size: 1rem;
     width: 100%;
     font-weight: 500;
   }
-  #homepage-projects{
+  #homepage-projects {
     gap: 2rem;
   }
-  .homepage-projects-title{
+  .homepage-projects-title {
     font-size: 1.5rem;
   }
-  .projects-container{
+  .projects-container {
     width: 100%;
     gap: 1.5rem;
   }
-  .projects-row{
+  .projects-row {
     flex-direction: column;
     gap: 1.5rem;
+    align-items: center;
   }
-  .project-item{
+  .project-item {
     width: 100%;
     height: 100%;
   }
